# Sonex

./: .gitignore  2lang_frase.py  MeLee.md  ReadMe.md  Sonex.py  _mfa_aligner.py  _translation_layer.py  _wav2vec2_viawhisperx_aligner_terminal.py  argos_translation_handler.py  dbgdrummer.py  drummervisual.py  fbf-key-vocals-y-novocals.py  frase.py  gui_sbs_viewer.py  gui_viewer.py  idea.txt  main.py  mfa_aligner_tester.py  needtodo.txt  pipeline.py  pyproject.toml  read_notes_fbf.py  requirements.txt  results.prof  sbs_fraze.py  streamline.py  streamline_gui.py  streamline_worker_process.py  test  todo.txt  translation_orchestrator.py  vocals_whisper_segments.json  vocals_whisper_segments_aligned.json
22/: argos_translated.json  es_argos_translated.json  vocals_whisper_segments.json  vocals_whisper_segments_aligned.json
RREGATON_ExperimentoMykeTowers/: lyrics.txt  vocals_transcribed_native.txt  vocals_whisper_segments.json
URBAN_LAT_OA_ANUELAA/: lyrics.txt  mfa_vocals_phone_segments.json  vocals_whisper_segments.json
audio/: audiocontext.py
bahamas/: lyrics.txt  mfa_vocals_phone_segments.json  mfa_vocals_whisper_segments.json  vocals_whisper_segments.json
cuerpo_a_cuerpo/: argos_translated.json  lyrics.txt  vocals_whisper_segments.json
depricated/: _w2v_aligner.py  _wav2vec2_whisperx_aligner.py  dbgdrummer.py  fbf-key.py  gui_sbs_viewer.py
docs/: MeLee.md  ReadMe.md  requirements_unclean.txt  roadmap.md
install/: requirements.txt  setup.py
installer/: README.md  SonexSetup.pyw  bootstrap.py  build_nuitka.bat  build_nuitka.sh  cmdlst.txt  core.py  req.txt  (+9 more)
(+354 files in other folders)
